--- a/mobile/src/main/res/layout/fragment_artists_list.xml
+++ b/mobile/src/main/res/layout/fragment_artists_list.xml
@@ -3,7 +3,7 @@
     android:layout_height="match_parent"
     android:layout_width="match_parent"
     android:orientation="vertical">
-    <SearchView
+    <android.support.v7.widget.SearchView
         android:layout_width="match_parent"
         android:layout_height="20dp"
         android:id="@+id/search_view"
