--- a/mobile/src/main/res/layout/two_pane.xml
+++ b/mobile/src/main/res/layout/two_pane.xml
@@ -1,21 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="horizontal" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <fragment
-        android:id="@+id/artists_fragment"
-        android:layout_width="400dp"
-        android:layout_marginRight="@dimen/activity_horizontal_margin"
-        android:layout_height="match_parent"
-        android:name="com.whitecloud.ron.musicplayer.ArtistsFragment"
-        tools:layout="@layout/fragment_artists_list" />
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
+    tools:context="com.whitecloud.ron.musicplayer.MainActivity">
 
-    <fragment
-        android:id="@+id/tracks_fragment"
+    <android.support.design.widget.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/AppTheme.AppBarOverlay">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            app:popupTheme="@style/AppTheme.PopupOverlay" />
+
+    </android.support.design.widget.AppBarLayout>
+
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:name="com.whitecloud.ron.musicplayer.TracksFragment"
-        tools:layout="@layout/fragment_track_list" />
+        android:orientation="horizontal">
 
-</LinearLayout>
+        <fragment
+            android:id="@+id/artists_fragment"
+            android:name="com.whitecloud.ron.musicplayer.ArtistsFragment"
+            android:layout_width="400dp"
+            android:layout_height="match_parent"
+            android:layout_marginRight="@dimen/activity_horizontal_margin"
+            tools:layout="@layout/fragment_artists_list" />
+
+        <fragment
+            android:id="@+id/tracks_fragment"
+            android:name="com.whitecloud.ron.musicplayer.TracksFragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:layout="@layout/fragment_track_list" />
+
+    </LinearLayout>
+</android.support.design.widget.CoordinatorLayout>
