--- a/mobile/src/main/res/layout/fragment_artists_list.xml
+++ b/mobile/src/main/res/layout/fragment_artists_list.xml
@@ -1,5 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <android.support.v7.widget.RecyclerView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+
+    android:id="@+id/artists_list"
+    android:name="com.whitecloud.ron.musicplayer.ArtistsFragment"
+    android:layout_height="match_parent"
+    android:layout_width="match_parent"
+    android:layout_marginRight="16dp"
+    android:layout_marginLeft="16dp"
+    />
+
+
+<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
     android:orientation="vertical">
@@ -7,11 +19,11 @@
         android:layout_width="match_parent"
         android:layout_height="20dp"
         android:id="@+id/search_view"
-        android:searchIcon="@android:drawable/ic_menu_search" />
+         />
     <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/list"
+        android:id="@+id/artists_list"
         android:name="com.whitecloud.ron.musicplayer.ArtistsFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -20,5 +32,5 @@
         app:layoutManager="LinearLayoutManager"
         tools:context="com.whitecloud.ron.musicplayer.ArtistsFragment"
         tools:listitem="@layout/fragment_artists" />
-</LinearLayout>
+</LinearLayout> -->
 
