--- a/mobile/src/main/res/values/layouts.xml
+++ b/mobile/src/main/res/values/layouts.xml
@@ -3,5 +3,8 @@
     <item name="main" type="layout">
         @layout/one_pane
     </item>
-    <bool name="dualPane">true</bool>
+    <item name="tracks" type="layout">
+        @layout/track_activity
+    </item>
+    <bool name="dualPane">false</bool>
 </resources>
