--- a/mobile/src/main/res/layout/track_activity.xml
+++ b/mobile/src/main/res/layout/track_activity.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.whitecloud.ron.musicplayer.MainActivity">
+    tools:context="com.whitecloud.ron.musicplayer.TracksActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -21,13 +20,15 @@
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
     </android.support.design.widget.AppBarLayout>
-
+    <ProgressBar
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/progress_bar_id"
+        android:indeterminate="false"/>
     <fragment
         android:id="@+id/tracks_fragment"
         android:layout_height="match_parent"
         android:layout_width="match_parent"
         android:name="com.whitecloud.ron.musicplayer.TracksFragment"
         tools:layout="@layout/fragment_track_list" />
-
-
 </android.support.design.widget.CoordinatorLayout>
