PlayerActivity showing up

--- a/mobile/src/main/res/values/layouts.xml
+++ b/mobile/src/main/res/values/layouts.xml
@@ -6,5 +6,9 @@
     <item name="tracks" type="layout">
         @layout/track_activity
     </item>
+
+    <item name="player" type="layout">
+        @layout/player_activity
+    </item>
     <bool name="dualPane">false</bool>
 </resources>
