--- a/mobile/src/main/res/layout/fragment_song_player.xml
+++ b/mobile/src/main/res/layout/fragment_song_player.xml
@@ -6,11 +6,21 @@
     >
     <TextView
         android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:id="@+id/Player_song_name_textview"
+       android:textColor="#ff0000"
+        android:paddingTop="50dp"
+        />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:id="@+id/Player_song_album_textview"
+        android:textColor="#ff0000"
+
+        />
+    <ImageView
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/Player_textview"
-       android:textColor="#ff0000"/>
-    <!--<ImageView-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:id="@+id/Player_image_view" />-->
+        android:id="@+id/Player_image_view"
+        android:contentDescription="@string/song_image"/>
 </LinearLayout>
