Using MusicService as MediaPlayerControl

--- a/mobile/src/main/res/layout/fragment_artists_list.xml
+++ b/mobile/src/main/res/layout/fragment_artists_list.xml
@@ -10,7 +10,7 @@
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         app:layoutManager="LinearLayoutManager"
-        tools:context="com.whitecloud.ron.musicplayer.ArtistsFragment"
+        tools:context=".ui.ArtistsFragment"
         tools:listitem="@layout/fragment_artists_one_item"
     />
 
@@ -28,13 +28,13 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/artists_list"
-        android:name="com.whitecloud.ron.musicplayer.ArtistsFragment"
+        android:name="com.whitecloud.ron.musicplayer.ui.ArtistsFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         app:layoutManager="LinearLayoutManager"
-        tools:context="com.whitecloud.ron.musicplayer.ArtistsFragment"
+        tools:context="com.whitecloud.ron.musicplayer.ui.ArtistsFragment"
         tools:listitem="@layout/fragment_artists_one_item" />
 </LinearLayout> -->
 
