--- a/mobile/src/main/res/layout/fragment_player.xml
+++ b/mobile/src/main/res/layout/fragment_player.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.whitecloud.ron.musicplayer.PlayerFragment">
+    tools:context=".ui.PlayerFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
