--- a/mobile/src/main/res/layout/one_pane.xml
+++ b/mobile/src/main/res/layout/one_pane.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.whitecloud.ron.musicplayer.MainActivity">
+    tools:context=".ui.MainActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -25,7 +25,7 @@
 		android:id="@+id/artists_fragment"
 		android:layout_height="match_parent"
 		android:layout_width="match_parent"
-		android:name="com.whitecloud.ron.musicplayer.ArtistsFragment"
+		android:name="com.whitecloud.ron.musicplayer.ui.ArtistsFragment"
         tools:layout="@layout/fragment_artists_list" />
 		
 	
