--- a/mobile/src/main/res/layout/track_activity.xml
+++ b/mobile/src/main/res/layout/track_activity.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.whitecloud.ron.musicplayer.TracksActivity">
+    tools:context=".ui.TracksActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -25,6 +25,6 @@
         android:id="@+id/tracks_fragment"
         android:layout_height="match_parent"
         android:layout_width="match_parent"
-        android:name="com.whitecloud.ron.musicplayer.TracksFragment"
+        android:name="com.whitecloud.ron.musicplayer.ui.TracksFragment"
         tools:layout="@layout/fragment_track_list" />
 </android.support.design.widget.CoordinatorLayout>
