--- a/mobile/src/main/res/layout/two_pane.xml
+++ b/mobile/src/main/res/layout/two_pane.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.whitecloud.ron.musicplayer.MainActivity">
+    tools:context=".ui.MainActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -30,15 +30,16 @@
 
         <fragment
             android:id="@+id/artists_fragment"
-            android:name="com.whitecloud.ron.musicplayer.ArtistsFragment"
+            android:name="com.whitecloud.ron.musicplayer.ui.ArtistsFragment"
             android:layout_width="400dp"
             android:layout_height="match_parent"
             android:layout_marginRight="@dimen/activity_horizontal_margin"
+            android:layout_marginEnd="@dimen/activity_horizontal_margin"
             tools:layout="@layout/fragment_artists_list" />
 
         <fragment
             android:id="@+id/tracks_fragment"
-            android:name="com.whitecloud.ron.musicplayer.TracksFragment"
+            android:name="com.whitecloud.ron.musicplayer.ui.TracksFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:layout="@layout/fragment_track_list" />
